# strategic-fl-sim

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
demos/femnist/: femnistdataset.py
demos/shakespeare/: shakespearedataset.py  shakespeareutils.py
demos/twitter/: twitter.ipynb  twitterdataset.py
examples/femnist/: femnist.ipynb
examples/shakespeare/: shakespeare.ipynb
experiments/femnist/: experiment-distributed.py  experiment-manual-client-array.py  experiment-single-node.py  experiment.py  femnistdataloader.py
experiments/femnist/configs/: femnist_single_node.yaml  femnist_single_node_10.yaml  femnist_test.yaml
experiments/shakespeare/: experiment.py  shakespearedataloader.py  shakespeareutils.py
experiments/shakespeare/configs/: shakespeare_test.yaml
experiments/twitter/: experiment.py  twitterdataloader.py
experiments/twitter/configs/: twitter_test.yaml
models/: bert.py  cnn.py
notebooks/femnist/: femnist.ipynb
notebooks/shakespeare/: shakespeare.ipynb
notebooks/twitter/: twitter.ipynb
src/models/: __init__.py  lstm.py
src/strategicfl/: __init__.py
src/strategicfl/agents/: client.py
src/strategicfl/utils/: actions.py
src/strategicflsim/: __init__.py
src/strategicflsim/agents/: __init__.py  base_client.py  (+4 more)
src/utils/: device.py  io.py
strategicfl/: actions.py  aggregation.py  trainer.py
strategicfl/agents/: __init__.py  agent.py  base_client.py  base_server.py  client.py  server.py
strategicfl/models/: bert.py
strategicfl/utils/: evaluate.py
utils/: __init__.py  config.py  evaluate.py  io.py
(+5 files in other folders)
