[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategicfl"
version = "0.1.0"
description = "Strategic Federated Learning Framework"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "omegaconf",
    "tqdm",
    "transformers",
    "matplotlib"
]

# [tool.setuptools.packages.find]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]